@@ -63,6 +63,7 @@
 
 - webhelpers.html.tags:
 
+    * Delete 'xml_declaration()'.
     * Delete 'convert_boolean_attrs()'. The HTML builder now does this itself.
     * Rename 'link_to()' to 'link()', 'link_to_if()' to 'link_if()', and
       'link_to_unless()' to 'link_unless()'.
